Fixing equation styles (mostly)

--- a/prehtml/affbg.htm
+++ b/prehtml/affbg.htm
@@ -277,25 +277,23 @@ As it happens, translation goes first:
 
 <table id="eq-ofs" class="eq-container">
 <tr>
-  <td class="eqnrcell">(<em>[[ref:eq-ofs]]</em>)
+  <td class="eqnrcell">(<em>[[ref:eq-ofs]]</em>)</td>
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td> <b>q</b>
-    <td>=
-    <td> <b>A</b> &middot; T(&minus;<b>dx</b>) <b>p</b>
-  <tr>
-    <td> T(<b>dx</b>) <b>P</b> &middot; <b>q</b>
-    <td>=
-    <td> <b>p</b>
-  <tr>
-    <td> <b>dx</b> + <b>P</b> &middot; <b>q</b>
-    <td>=
-    <td> <b>p</b>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td> <b>q</b>
+      <td>=
+      <td> <b>A</b> &middot; T(&minus;<b>dx</b>) <b>p</b>
+    <tr>
+      <td> T(<b>dx</b>) <b>P</b> &middot; <b>q</b>
+      <td>=
+      <td> <b>p</b>
+    <tr>
+      <td> <b>dx</b> + <b>P</b> &middot; <b>q</b>
+      <td>=
+      <td> <b>p</b>
+    </table>
+  </td>
 </table>
 
 <p>
@@ -313,28 +311,26 @@ transformation equation:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ofs]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td> <b>dx + P &middot; q</b>
-	<td> =
-	<td> <b>p</b>
-  <tr>
-    <td class="bdrB"> <b>P</b> &middot; (<b>q &minus; q</b><sub>0</sub>)
-    <td class="bdrB">=
-	<td class="bdrB"> <b>p &minus; p</b><sub>0</sub>
-    <td class="bdrB">&minus;
-  <tr>
-    <td> <b>dx + P &middot; q</b><sub>0</sub>
-	<td> =
-	<td> <b>p</b><sub>0</sub>
-  <tr>
-    <td><b>dx</b>
-	<td> = 
-	<td> <b>p</b><sub>0</sub> &minus; <b>P &middot; q</b><sub>0</sub>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td> <b>dx + P &middot; q</b>
+    <td>=
+    <td> <b>p</b>
+    <tr>
+      <td class="bdrB"> <b>P</b> &middot; (<b>q &minus; q</b><sub>0</sub>)
+      <td class="bdrB">=
+    <td class="bdrB"> <b>p &minus; p</b><sub>0</sub>
+      <td class="bdrB">&minus;
+    <tr>
+      <td> <b>dx + P &middot; q</b><sub>0</sub>
+    <td>=
+    <td> <b>p</b><sub>0</sub>
+    <tr>
+      <td><b>dx</b>
+    <td>=
+    <td> <b>p</b><sub>0</sub> &minus; <b>P &middot; q</b><sub>0</sub>
+    </table>
+  </td>
 </table>
 
 <p>
