--- a/prehtml/affobj.htm
+++ b/prehtml/affobj.htm
@@ -125,38 +125,36 @@ matrix is this:
 <table class="eq-container">
 <tr>
   <td class="fill">&nbsp;
-  <td class="eqcell"> <b>P</b> =
+  <td class="eqcell"> <b>P</b>&nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrLL" rowspan=2>&nbsp;
-    <td><i>p</i><sub>a</sub>
-    <td>&nbsp;
-    <td><i>p</i><sub>b</sub>
-    <td class="bdrRR" rowspan=2>&nbsp;
-  <tr>
-    <td><i>p</i><sub>c</sub>
-    <td>&nbsp;
-    <td><i>p</i><sub>d</sub>
-  </tbody>
-  </table>
-  <td class="eqcell"> =
+    <table class="eqtbl matrix">
+    <tr>
+      <td class="bdrLL" rowspan=2>&nbsp;
+      <td><i>p</i><sub>a</sub>
+      <td>&nbsp;
+      <td><i>p</i><sub>b</sub>
+      <td class="bdrRR" rowspan=2>&nbsp;
+    <tr>
+      <td><i>p</i><sub>c</sub>
+      <td>&nbsp;
+      <td><i>p</i><sub>d</sub>
+    </table>
+  </td>
+  <td class="eqcell">&nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrLL" rowspan=2>&nbsp;
-    <td>cos(&alpha;) / <i>s</i><sub>x</sub>
-    <td>&nbsp;
-    <td>&minus;sin(&alpha;) / <i>s</i><sub>x</sub>
-    <td class="bdrRR" rowspan=2>&nbsp;
-  <tr>
-    <td>sin(&alpha;) / <i>s</i><sub>y</sub>
-    <td>&nbsp;
-    <td>cos(&alpha;) / <i>s</i><sub>y</sub>
-  </tbody>
-  </table>
+    <table class="eqtbl matrix">
+    <tr>
+      <td class="bdrLL" rowspan=2>&nbsp;
+      <td>cos(&alpha;)/<i>s</i><sub>x</sub>
+      <td>&nbsp;
+      <td>&minus;sin(&alpha;)/<i>s</i><sub>x</sub>
+      <td class="bdrRR" rowspan=2>&nbsp;
+    <tr>
+      <td>sin(&alpha;)/<i>s</i><sub>y</sub>
+      <td>&nbsp;
+      <td>cos(&alpha;)/<i>s</i><sub>y</sub>
+    </table>
+  </td>
 </table>
 
 <p>
@@ -863,26 +861,23 @@ equations.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ex-base]]</em>)</td>
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td> <b>x</b> + <b>c</b><sub>q</sub> + <b>r</b><sub>q</sub> </td>
-    <td> = </td>
-    <td> <b>q</b><sub>0</sub> </td>
-  </tr>
-  <tr>
-    <td> <b>c</b><sub>p</sub> + <b>r</b><sub>p</sub> </td>
-    <td> = </td>
-    <td> <b>p</b><sub>0</sub> </td>
-  </tr>
-  <tr>
-    <td> <b>r</b><sub>p</sub> </td>
-    <td> = </td>
-    <td> <b>P</b>&middot;<b>r</b><sub>q</sub> </td>
-  </tr>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+        <td> <b>x</b> + <b>c</b><sub>q</sub> + <b>r</b><sub>q</sub> </td>
+        <td> = </td>
+        <td> <b>q</b><sub>0</sub> </td>
+    </tr>
+    <tr>
+        <td> <b>c</b><sub>p</sub> + <b>r</b><sub>p</sub> </td>
+        <td> = </td>
+        <td> <b>p</b><sub>0</sub> </td>
+    </tr>
+    <tr>
+        <td> <b>r</b><sub>p</sub> </td>
+        <td> = </td>
+        <td> <b>P</b>&middot;<b>r</b><sub>q</sub> </td>
+    </tr>
+    </table>
   </td>
 </tr>
 </table>
@@ -898,19 +893,15 @@ in the most usable form.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-aff-ex]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tbody valign="middle">
-  <tr>
-    <td> <b>x</b>
-    <td>=
-    <td> <b>q</b><sub>0</sub> &minus; <i>m</i><b>s</b> &minus; 
-	  <b>P</b><sup>&minus;1</sup> &middot; 
-	  (<b>p</b><sub>0</sub> &minus; &frac12;<b>s</b>)
-  </tbody>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+        <td> <b>x</b>
+        <td>=
+        <td> <b>q</b><sub>0</sub> &minus; <i>m</i><b>s</b> &minus; 
+        <b>P</b><sup>&minus;1</sup> &middot; 
+        (<b>p</b><sub>0</sub> &minus; &frac12;<b>s</b>)
+    </table>
+  </td>
 </table>
 
 <p>
