--- a/prehtml/asm.htm
+++ b/prehtml/asm.htm
@@ -1996,20 +1996,21 @@ for numbers larger thatn the registers.
 <b>Table <em>[[ref:tbl-carry]]</em></b>: 
   carry bit in (unsigned) addition.
 </caption>
-<col width=160>
-<tr valign="bottom"><td>
-  <table class="eqtbl">
-    <tr>
-	  <th>2<sup>31</sup> &nbsp;
-	  <td><code>&nbsp;&nbsp;8000 0000</code>
-    <tr>
-	  <th class="bdrB">2<sup>31</sup> &nbsp;
-	  <td class="bdrB"><code>&nbsp;&nbsp;8000 0000</code>&nbsp;
-	  <td class="bdrB"> +
-    <tr>
-	  <th>2<sup>32</sup>
-	  <td><code><b>1</b> 0000 0000</code>
-  </table>
+<tr>
+  <td>
+    <table class="eqtbl c1-l c2-r">
+      <tr>
+      <td><b>2<sup>31</sup></b> &nbsp;
+      <td><code>&nbsp;&nbsp;8000 0000</code>
+      <tr>
+      <td class="bdrB"><b>2<sup>31</sup></b> &nbsp;
+      <td class="bdrB"><code>&nbsp;&nbsp;8000 0000</code>
+      <td clas="bdrB"> +
+      <tr>
+      <td><b>2<sup>32</sup></b></td>
+      <td><code><b>1</b> 0000 0000</code>
+    </table>
+  </td>
 </table>
 </div>
 
@@ -2051,20 +2052,21 @@ information to pick the right one.
 <caption>
 <b>Table <em>[[ref:tbl-overflow]]</em></b>: sign overflow.
 </caption>
-<col width=160>
-<tr valign="bottom"><td>
-  <table class="eqtbl">
-    <tr>
-	  <th>+2<sup>30</sup> &nbsp;
-	  <td><code>4000 0000</code>
-    <tr>
-	  <th class="bdrB">+2<sup>30</sup> &nbsp;
-	  <td class="bdrB"><code>4000 0000</code>&nbsp;
-	  <td class="bdrB"> +
-    <tr>
-	  <th><b>&minus;</b>2<sup>31</sup>
-	  <td><code>8000 0000</code>
-  </table>
+<tr>
+  <td>
+    <table class="eqtbl c1-r c2-r">
+      <tr>
+      <td><b>+2<sup>30</sup></b> &nbsp;
+      <td><code>4000 0000</code>
+      <tr>
+      <td class="bdrB"><b>+2<sup>30</sup></b> &nbsp;
+      <td class="bdrB"><code>4000 0000</code>
+      <td class="bdrB"> +
+      <tr>
+      <td><b>&minus;2<sup>31</sup></b> &nbsp;
+      <td><code>8000 0000</code>
+    </table>
+  </td>
 </table>
 </div>
 
