--- a/prehtml/base.htm
+++ b/prehtml/base.htm
@@ -89,15 +89,13 @@
 <tr>
   <td class="eqnrcell">()
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td>
-    <td>=
-    <td>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td>
+      <td>=
+      <td>
+    </table>
+  </td>
 </table>
 -->
 
