--- a/prehtml/fixed.htm
+++ b/prehtml/fixed.htm
@@ -418,12 +418,7 @@ scaling factor, respectively.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fix-add]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <col align="center">
-  <col align="left">
+  <table class="eqtbl basic">
   <tr>
     <td> <i>fa</i>
     <td>=
@@ -439,18 +434,13 @@ scaling factor, respectively.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fix-mul]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <col align="center">
-  <col align="left">
+  <table class="eqtbl c1-l c2-c c3-c c4-c c5-l">
   <tr>
     <td> <i>fc</i>
     <td>=
     <td> <i>fa + fb</i>
-	<td>=
-	<td>(<i>a + b</i>) &middot; <i>M</i>
+    <td>=
+    <td>(<i>a + b</i>) &middot; <i>M</i>
   <tr>
     <td> <i>fd</i>
     <td>=
@@ -461,14 +451,14 @@ scaling factor, respectively.
     <td> <i>fe</i>
     <td>=
     <td> <i>fa &middot; fb</i>
-	<td>=
-	<td>(<i>a + b</i>) &middot; <i>M</i> &sup2;
+    <td>=
+    <td>(<i>a + b</i>) &middot; <i>M</i>&thinsp;&sup2;
   <tr>
     <td> <i>ff</i>
     <td>=
     <td> <i>fa</i> / <i>fb</i>
-	<td>=
-	<td>(<i>a</i> / <i>b</i>)
+    <td>=
+    <td>(<i>a</i> / <i>b</i>)
   </table>
 </table>
 
