--- a/prehtml/lab.htm
+++ b/prehtml/lab.htm
@@ -420,20 +420,19 @@ the <i>y</i>-axis can be described by the following relation:
 <table id="eq-helix" class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-helix]]</em>)
-  <td class="eqcell"> <b>x</b>(t) &nbsp;=&nbsp;
+  <td class="eqcell"> <b>x</b>(t)&nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrLL" rowspan=3>&nbsp;
-    <td><i>A</i>&middot;cos(<i>k</i>&middot;<i>y</i>+&omega;<i>t</i>)
-    <td class="bdrRR" rowspan=3>&nbsp;
-  <tr>
-    <td> <i>y</i>
-  <tr>
-    <td><i>A</i>&middot;sin(<i>k</i>&middot;<i>y</i>+&omega;<i>t</i>)
-  </tbody>
-  </table>
+    <table class="eqtbl matrix">
+    <tr>
+      <td class="bdrLL" rowspan=3>&nbsp;
+      <td><i>A</i>&middot;cos(<i>k</i>&middot;<i>y</i>+&omega;<i>t</i>)
+      <td class="bdrRR" rowspan=3>&nbsp;
+    <tr>
+      <td> <i>y</i>
+    <tr>
+      <td><i>A</i>&middot;sin(<i>k</i>&middot;<i>y</i>+&omega;<i>t</i>)
+    </table>
+  </td>
 </table>
 
 <p>
@@ -877,15 +876,13 @@ faster. but the final implementation will be up to you.
 <tr>
   <td class="eqnrcell">()
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td>
-    <td>=
-    <td>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td>
+      <td>=
+      <td>
+    </table>
+  </td>
 </table>
 -->
 
