--- a/prehtml/regbg.htm
+++ b/prehtml/regbg.htm
@@ -465,19 +465,17 @@ position <b>q</b>, then the following is true:
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-bgr-dx]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td><b>q + dx</b>
-	<td>=
-	<td><b>p</b>
-  <tr>
-    <td><b>q</b>
-	<td>= 
-	<td><b>p &minus; dx</b>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td><b>q + dx</b>
+    <td>=
+    <td><b>p</b>
+    <tr>
+      <td><b>q</b>
+    <td>=
+    <td><b>p &minus; dx</b>
+    </table>
+  </td>
 </table>
 
 <div class="note">
