--- a/prehtml/sndsqr.htm
+++ b/prehtml/sndsqr.htm
@@ -144,23 +144,21 @@ General solution(s):
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-wave-sols]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td>&psi;(<i>x</i>)
-    <td>=
-    <td> A&middot;cos(k<i>x</i>) + B&middot;sin(k<i>x</i>) 
-  <tr>
-    <td>&nbsp;
-    <td>=
-    <td> C&middot;e<sup>i k<i>x</i></sup> + D&middot;e<sup>-i k<i>x</i></sup>
-  <tr>
-    <td>&nbsp;
-    <td>=
-    <td> E&middot;sin(k<i>x</i> + &phi;<sub>0</sub>)
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td>&psi;(<i>x</i>)
+      <td>=
+      <td> A&middot;cos(k<i>x</i>) + B&middot;sin(k<i>x</i>) 
+    <tr>
+      <td>&nbsp;
+      <td>=
+      <td> C&middot;e<sup>i k<i>x</i></sup> + D&middot;e<sup>-i k<i>x</i></sup>
+    <tr>
+      <td>&nbsp;
+      <td>=
+      <td> E&middot;sin(k<i>x</i> + &phi;<sub>0</sub>)
+    </table>
+  </td>
 </table>
 
 <div class="cpt_fr" style="width:212px;">
@@ -306,30 +304,29 @@ they're all doing the same thing.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-ftrans]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody valign="middle">
-  <tr>
-    <td><i>A</i><sub>m</sub>
-    <td> =
-    <td>
-      <table>
-      <tr><td class="bdrB"> 2
-      <tr><td> T
-      </table>
-    <td><big>&int;</big><sub>0,T</sub> 
-      f(<i>t</i>) cos(m&omega;<i>t</i>) dt
-  <tr>
-    <td><i>B</i><sub>m</sub>
-    <td> =
-    <td>
-      <table>
-      <tr><td class="bdrB"> 2
-      <tr><td> T
-      </table>
-    <td><big>&int;</big><sub>0,T</sub> 
-      f(<i>t</i>) sin(m&omega;<i>t</i>) dt
-  </tbody>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td><i>A</i><sub>m</sub>
+      <td> =
+      <td>
+        <table>
+        <tr><td class="bdrB"> 2
+        <tr><td> T
+        </table>
+      <td><big>&int;</big><sub>0,T</sub> 
+        f(<i>t</i>) cos(m&omega;<i>t</i>) dt
+    <tr>
+      <td><i>B</i><sub>m</sub>
+      <td> =
+      <td>
+        <table>
+        <tr><td class="bdrB"> 2
+        <tr><td> T
+        </table>
+      <td><big>&int;</big><sub>0,T</sub> 
+        f(<i>t</i>) sin(m&omega;<i>t</i>) dt
+    </table>
+  </td>
 </table>
 
 
@@ -359,30 +356,28 @@ follow from eq&nbsp;<em>[[ref:eq-ftrans]]</em>.
   <td class="eqcell">
     <i>A</i><sub>m</sub> = 
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrB">2
-    <td rowspan=2>&middot;
-    <td class="bdrB">sin(&pi;m <i>h/T</i>)
-  <tr>
-    <td>&pi;
-    <td>m
-  </tbody>
-  </table>
+    <table class="eqtbl align-c">
+    <tr>
+      <td class="bdrB">2
+      <td rowspan=2>&middot;
+      <td class="bdrB">sin(&pi;m <i>h/T</i>)
+    <tr>
+      <td>&pi;
+      <td>m
+    </table>
+  </td>
   <td> &nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrB">2<i>T</i>
-    <td rowspan=2>&middot;
-    <td class="bdrB">sin(&pi;<i>h/T</i> m)
-  <tr>
-    <td><i>h</i>
-    <td>&pi;<i>h/T</i> m
-  </tbody>
-  </table>
+    <table class="eqtbl align-c">
+    <tr>
+      <td class="bdrB">2<i>T</i>
+      <td rowspan=2>&middot;
+      <td class="bdrB">sin(&pi;<i>h/T</i> m)
+    <tr>
+      <td><i>h</i>
+      <td>&pi;<i>h/T</i> m
+    </table>
+  </td>
 </table>
 
 
@@ -739,15 +734,14 @@ denominator in eq&nbsp;<em>[[ref:eq-fvsr]]</em> approaches 0).
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fvsr]]</em>a)
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center" valign="middle">
-  <tr>
-    <td rowspan=2> <i>f</i>(<i>R</i>) &nbsp;=&nbsp;
-    <td class="bdrB"> 2<sup>17</sup>
-  <tr>
-    <td> 2048 &minus; <i>R</i>
-  </tbody>
-  </table>
+    <table class="eqtbl align-c">
+    <tr>
+      <td rowspan=2> <i>f</i>(<i>R</i>) &nbsp;=&nbsp;
+      <td class="bdrB"> 2<sup>17</sup>
+    <tr>
+      <td> 2048 &minus; <i>R</i>
+    </table>
+  </td>
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-fvsr]]</em>b)
   <td class="eqcell">
@@ -837,17 +831,16 @@ they have exactly the same function.
   <td class="eqcell">
     <i>A</i><sub>m</sub> = 
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrB">2
-    <td rowspan=2>&middot;
-    <td class="bdrB">sin(&pi;<i>D</i> m)
-  <tr>
-    <td>&pi;
-    <td>m
-  </tbody>
-  </table>
+    <table class="eqtbl align-c">
+    <tr>
+      <td class="bdrB">2
+      <td rowspan=2>&middot;
+      <td class="bdrB">sin(&pi;<i>D</i> m)
+    <tr>
+      <td>&pi;
+      <td>m
+    </table>
+  </td>
 </table>
 
 <p>
@@ -1013,26 +1006,24 @@ the shift, the slower the sweep.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-sweep]]</em>b)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td><i>R</i><sub>j</sub> 
-    <td>&nbsp;=&nbsp;
-    <td><i>R</i><sub>j&minus;1</sub> &plusmn; 
-      <i>R</i><sub>j&minus;1</sub>&middot;2<sup>-n</sup>
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td><i>R</i><sub>j&minus;1</sub><big>(</big>1 &plusmn; 
-      2<sup>&minus;n</sup><big>)</big>
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td><i>R</i><sub>0</sub>
-      <big>(</big>1 &plusmn; 2<sup>&minus;n</sup><big>)<sup>j</sup></big>
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td><i>R</i><sub>j</sub> 
+      <td>&nbsp;=&nbsp;
+      <td><i>R</i><sub>j&minus;1</sub> &plusmn; 
+        <i>R</i><sub>j&minus;1</sub>&middot;2<sup>-n</sup>
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td><i>R</i><sub>j&minus;1</sub><big>(</big>1 &plusmn; 
+        2<sup>&minus;n</sup><big>)</big>
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td><i>R</i><sub>0</sub>
+        <big>(</big>1 &plusmn; 2<sup>&minus;n</sup><big>)<sup>j</sup></big>
+    </table>
+  </td>
 </table>
 
 <table class="eq-container">
@@ -1075,20 +1066,18 @@ frequency <i>f</i> and octave <i>c</i>. We also have a base octave
 <tr>
   <td class="fill">&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td><i>f</i>(<i>F</i>, <i>c</i>)
-    <td>&nbsp;=&nbsp;
-    <td><i>F</i>&middot;2<sup>c&minus;C</sup>
-  <tr>
-    <td><i>R</i>(<i>F</i>, <i>c</i>)
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/</big> 
-      <i>f</i>(<i>F</i>, <i>c</i>)
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td><i>f</i>&thinsp;(<i>F</i>, <i>c</i>)
+      <td>&nbsp;=&nbsp;
+      <td><i>F</i>&middot;2<sup>c&minus;C</sup>
+    <tr>
+      <td><i>R</i>(<i>F</i>, <i>c</i>)
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/</big> 
+        <i>f</i>(<i>F</i>, <i>c</i>)
+    </table>
+  </td>
 </table>
 
 <p>
@@ -1100,38 +1089,36 @@ this.
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-noterate]]</em>)
   <td class="eqcell">
-  <table class="eqtbl">
-  <col align="right">
-  <col align="center">
-  <col align="left">
-  <tr>
-    <td><i>R</i>(<i>F</i>, <i>c</i>)
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/</big> 
-      <i>f</i>(<i>F</i>, <i>c</i>)
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/ 
-      (</big><i>F</i>&middot;2<sup>c&minus;C</sup><big>)</big>
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus; 
-      2<sup>17+C&minus;c</sup> <big>/</big> 
-      <i>F</i>
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus; 1<big>/</big><i>F</i> &middot;   
-      2<sup>17+C+m&minus;(<i>c</i>+m)</sup> 
-  <tr>
-    <td>&nbsp;
-    <td>&nbsp;=&nbsp;
-    <td>2<sup>11</sup> &minus;   
-      <big>{</big> 2<sup>17+C+m</sup><big>/</big><i>F</i> <big>}</big>
-      &middot; 2<sup>&minus;(<i>c</i>+m)</sup> 
-  </table>
+    <table class="eqtbl basic">
+    <tr>
+      <td><i>R</i>(<i>F</i>, <i>c</i>)
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/</big> 
+        <i>f</i>(<i>F</i>, <i>c</i>)
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus; 2<sup>17</sup> <big>/ 
+        (</big><i>F</i>&middot;2<sup>c&minus;C</sup><big>)</big>
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus; 
+        2<sup>17+C&minus;c</sup> <big>/</big> 
+        <i>F</i>
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus; 1<big>/</big><i>F</i> &middot;   
+        2<sup>17+C+m&minus;(<i>c</i>+m)</sup> 
+    <tr>
+      <td>&nbsp;
+      <td>&nbsp;=&nbsp;
+      <td>2<sup>11</sup> &minus;   
+        <big>{</big> 2<sup>17+C+m</sup><big>/</big><i>F</i> <big>}</big>
+        &middot; 2<sup>&minus;(<i>c</i>+m)</sup> 
+    </table>
+  </td>
 </table>
 
 <p>
