--- a/prehtml/swi.htm
+++ b/prehtml/swi.htm
@@ -221,22 +221,21 @@ angle &alpha;, which again uses the range [0,&nbsp;0xFFFF] for
 <table id="eq-pswi" class="eq-container">
 <tr>
   <td class="eqnrcell">(<em>[[ref:eq-pswi]]</em>)
-  <td class="eqcell"> <b>P</b> =
+  <td class="eqcell"> <b>P</b>&nbsp;=&nbsp;
   <td class="eqcell">
-  <table class="eqtbl">
-  <tbody align="center">
-  <tr>
-    <td class="bdrLL" rowspan=2>&nbsp;
-    <td><i>s</i><sub>x</sub>&middot;cos(&alpha;)
-    <td>&nbsp;
-    <td>&minus;<i>s</i><sub>x</sub>&middot;sin(&alpha;)
-    <td class="bdrRR" rowspan=2>&nbsp;
-  <tr>
-    <td><i>s</i><sub>y</sub>&middot;sin(&alpha;)
-    <td>&nbsp;
-    <td><i>s</i><sub>y</sub>&middot;cos(&alpha;)
-  </tbody>
-  </table>
+    <table class="eqtbl matrix">
+    <tr>
+      <td class="bdrLL" rowspan=2>&nbsp;
+      <td><i>s</i><sub>x</sub>&middot;cos(&alpha;)
+      <td>&nbsp;
+      <td>&minus;<i>s</i><sub>x</sub>&middot;sin(&alpha;)
+      <td class="bdrRR" rowspan=2>&nbsp;
+    <tr>
+      <td><i>s</i><sub>y</sub>&middot;sin(&alpha;)
+      <td>&nbsp;
+      <td><i>s</i><sub>y</sub>&middot;cos(&alpha;)
+    </table>
+  </td>
 </table>
 
 <p>
